# SomeDL

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  pyproject.toml
src/: cli.rs  config.rs  main.rs
src/SomeDL/: main.py
src/api/: deezer.rs  genius.rs  mod.rs  musicbrainz.rs  ytmusic.rs
src/core/: downloader.rs  input_parser.rs  metadata.rs  mod.rs  report.rs
src/utils/: sanitize.rs
