[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "SomeDL"
version = "0.2.2"
authors = [
    {name="ChemistryGull", email="html.gull@gmail.com"},
]
description = "A command line utility to download songs from youtube with metadata from different APIs without the need for API-tokens or login. "
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ytmusicapi",
    "mutagen",
    "yt_dlp",
    "requests",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]

[project.scripts]
somedl = "SomeDL.main:main"
